# api

./: Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/_cfg/ides/: codex.yaml
.bmad/bmad-custom-src/: custom.yaml
.bmad/bmb/: config.yaml
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
.github/workflows/: ci.yml  release.yml
crates/placy-cli/: Cargo.toml
crates/placy-cli/src/: main.rs
crates/placy-core/: Cargo.toml
crates/placy-core/src/: archive.rs  config.rs  error.rs  jar.rs  lib.rs  processor.rs  security.rs  text.rs
crates/placy-server/: Cargo.toml  config.example.toml
crates/placy-server/src/: auth.rs  config.rs  handlers.rs  main.rs  telemetry.rs
crates/placy-server/src/routes/: health.rs  metrics.rs  mod.rs
crates/placy-server/src/routes/v1/: mod.rs  process.rs
examples/: basic_usage.rs
src/: config.rs  jar.rs  lib.rs  main.rs  processor.rs  workflows.rs  zip_operations.rs
test/integration/: jar_test.hurl
